進捗ウィンドウの下部ボタンがつぶれる問題の修正

--- a/Packages/net.raitichan.avatar.bulk-uploader/Editor/Window/UploadProgressWindow.uss
+++ b/Packages/net.raitichan.avatar.bulk-uploader/Editor/Window/UploadProgressWindow.uss
@@ -26,4 +26,5 @@ AvatarProgress.error .unity-progress-bar__progress {
 .button-group {
     justify-content: flex-end;
     flex-direction: row;
+    flex-shrink: 0;
 }
